Make sure EntityData.ID is unique in the same room to avoid problems.

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Patches\CrumblePlatform.cs" />
     <Compile Include="Patches\EntityData.cs" />
     <Compile Include="Patches\IntroCrusher.cs" />
+    <Compile Include="Patches\LevelData.cs" />
     <Compile Include="Patches\Maddy3D.cs" />
     <Compile Include="Patches\ModeProperties.cs" />
     <Compile Include="Patches\MountainRenderer.cs" />
