--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,8 @@ steps:
     publishLocation: 'Container'
 
 - task: PowerShell@2
-  condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+# condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+  condition: not(always())
   displayName: 'Run azure-pipelines-postbuild.ps1'
   inputs:
     filePath: 'azure-pipelines-postbuild.ps1'
