--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -368,6 +368,14 @@
       <Link>libdiscord-rpc.so</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="..\lib-mono\libMonoPosixHelper.dylib.dSYM\Contents\Info.plist">
+      <Link>libMonoPosixHelper.dylib.dSYM\Contents\Info.plist</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\lib-mono\libMonoPosixHelper.dylib.dSYM\Contents\Resources\DWARF\libMonoPosixHelper.dylib">
+      <Link>libMonoPosixHelper.dylib.dSYM\Contents\Resources\DWARF\libMonoPosixHelper.dylib</Link>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
