--- a/Celeste.Mod.mm/packages.config
+++ b/Celeste.Mod.mm/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetZip" version="1.13.3" targetFramework="net452" />
   <package id="Jdenticon-net" version="2.2.1" targetFramework="net452" />
-  <package id="Mono.Cecil" version="0.10.0" targetFramework="net35" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.10.4" targetFramework="net452" />
+  <package id="MonoMod" version="19.6.9.5" targetFramework="net452" />
+  <package id="MonoMod.RuntimeDetour" version="19.6.9.5" targetFramework="net452" />
+  <package id="MonoMod.RuntimeDetour.HookGen" version="19.6.9.5" targetFramework="net452" />
+  <package id="MonoMod.Utils" version="19.6.9.5" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
+  <package id="YamlDotNet" version="6.1.1" targetFramework="net452" />
 </packages>
