--- a/Celeste.Mod.mm/packages.config
+++ b/Celeste.Mod.mm/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="DotNetZip" version="1.13.3" targetFramework="net452" />
   <package id="Jdenticon-net" version="2.2.1" targetFramework="net452" />
+  <package id="KeraLua" version="1.0.19" targetFramework="net452" />
   <package id="Mono.Cecil" version="0.10.4" targetFramework="net452" />
   <package id="MonoMod" version="19.8.2.3" targetFramework="net452" />
   <package id="MonoMod.RuntimeDetour" version="19.8.2.3" targetFramework="net452" />
   <package id="MonoMod.RuntimeDetour.HookGen" version="19.8.2.3" targetFramework="net452" />
   <package id="MonoMod.Utils" version="19.8.2.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
+  <package id="NLua" version="1.4.20" targetFramework="net452" />
   <package id="YamlDotNet" version="6.1.2" targetFramework="net452" />
 </packages>
