--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Mod\Entities\CoreModeTrigger.cs" />
     <Compile Include="Mod\Entities\CustomNPC.cs" />
     <Compile Include="Mod\Entities\LavaBlockerTrigger.cs" />
+    <Compile Include="Mod\Everest\Everest.LuaLoader.Caches.cs" />
     <Compile Include="Mod\Everest\Everest.LuaLoader.HookHelper.cs" />
     <Compile Include="Mod\Everest\Everest.LuaLoader.cs" />
     <Compile Include="Mod\Helpers\MonoModUpdateShim.cs" />
