--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/apps/windows/dot-net
 
 pool:
-  vmImage: 'VS2017-Win2016'
+  vmImage: 'windows-2019'
 
 variables:
   solution: '**/*.sln'
@@ -14,10 +14,6 @@ variables:
 name: '$(Build.BuildId)+$(Build.BuildIdOffset)'
 
 steps:
-# Environment setup.
-- task: NuGetToolInstaller@0
-  displayName: 'Install NuGet'
-
 # Pre-build steps.
 - task: NuGetCommand@2
   displayName: 'Restore NuGet packages'
