--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Patches\BadelineOldsite.cs" />
     <Compile Include="Patches\CrumblePlatform.cs" />
     <Compile Include="Patches\EntityData.cs" />
+    <Compile Include="Patches\MusicFadeTrigger.cs" />
     <Compile Include="Patches\IntroCrusher.cs" />
     <Compile Include="Patches\LevelData.cs" />
     <Compile Include="Patches\Maddy3D.cs" />
