Shim AudioState.Apply

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Mod\UI\OuiHelper_ChapterSelect_Reload.cs" />
     <Compile Include="Patches\CassetteBlock.cs" />
     <Compile Include="Patches\DashBlock.cs" />
+    <Compile Include="Patches\AudioState.cs" />
     <Compile Include="Patches\Holdable.cs" />
     <Compile Include="Patches\Language.cs" />
     <Compile Include="Patches\FinalBoss.cs" />
