--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Patches\CassetteBlock.cs" />
     <Compile Include="Patches\DashBlock.cs" />
     <Compile Include="Patches\AudioState.cs" />
+    <Compile Include="Patches\Monocle\Sprite.cs" />
     <Compile Include="Patches\Holdable.cs" />
     <Compile Include="Patches\Language.cs" />
     <Compile Include="Patches\FinalBoss.cs" />
