--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Mod\Helpers\SafeRoutine.cs" />
     <Compile Include="Mod\UI\OuiHelper_ChapterSelect_Reload.cs" />
     <Compile Include="Patches\CassetteBlock.cs" />
+    <Compile Include="Patches\Checkpoint.cs" />
     <Compile Include="Patches\DashBlock.cs" />
     <Compile Include="Patches\AudioState.cs" />
     <Compile Include="Patches\Monocle\Sprite.cs" />
