--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Patches\Dust.cs" />
     <Compile Include="Patches\Debris.cs" />
     <Compile Include="Patches\CS10_Ending.cs" />
+    <Compile Include="Patches\RainFG.cs" />
     <Compile Include="Patches\TrailManager.cs" />
     <Compile Include="Patches\TheoCrystal.cs" />
     <Compile Include="Patches\UnlockEverythingThingy.cs" />
