--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Patches\Maddy3D.cs" />
     <Compile Include="Patches\ModeProperties.cs" />
     <Compile Include="Patches\MountainRenderer.cs" />
+    <Compile Include="Patches\Platform.cs" />
     <Compile Include="Patches\PreviewRecording.cs" />
     <Compile Include="Patches\Postcard.cs" />
     <Compile Include="Patches\ReturnMapHint.cs" />
