Toggle debug mode at runtime

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -262,6 +262,7 @@
     <Compile Include="Patches\CS10_Ending.cs" />
     <Compile Include="Patches\RainFG.cs" />
     <Compile Include="Patches\PlaybackData.cs" />
+    <Compile Include="Patches\MenuButton.cs" />
     <Compile Include="Patches\TrailManager.cs" />
     <Compile Include="Patches\UnlockEverythingThingy.cs" />
     <Compile Include="Patches\TheoCrystalCollider.cs" />
