--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Patches\DashBlock.cs" />
     <Compile Include="Patches\AudioState.cs" />
     <Compile Include="Patches\DreamBlock.cs" />
+    <Compile Include="Patches\Monocle\SineWave.cs" />
     <Compile Include="Patches\Monocle\Sprite.cs" />
     <Compile Include="Patches\Holdable.cs" />
     <Compile Include="Patches\Language.cs" />
