--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -131,7 +131,7 @@
     <Compile Include="Mod\Helpers\MainThreadHelper.cs" />
     <Compile Include="Mod\Helpers\DirectoryProxy.cs" />
     <Compile Include="Mod\Helpers\MonoModUpdateShim.cs" />
-    <Compile Include="Mod\Everest\AssetReloadScene.cs" />
+    <Compile Include="Mod\Helpers\AssetReloadHelper.cs" />
     <Compile Include="Mod\Helpers\XXHash.cs" />
     <Compile Include="Mod\Module\LuaModule.cs" />
     <Compile Include="Mod\Module\NullModule.cs" />
