--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Mod\Helpers\AssetReloadHelper.cs" />
     <Compile Include="Mod\Helpers\XXHash.cs" />
     <Compile Include="Mod\Helpers\LuaCoroutine.cs" />
+    <Compile Include="Mod\Helpers\XNAFNAShims.cs" />
     <Compile Include="Mod\Module\EverestModuleBinarySession.cs" />
     <Compile Include="Mod\Module\EverestModuleSession.cs" />
     <Compile Include="Mod\Module\LuaModule.cs" />
