--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Patches\Maddy3D.cs" />
     <Compile Include="Patches\ModeProperties.cs" />
     <Compile Include="Patches\MountainRenderer.cs" />
+    <Compile Include="Patches\patch_Pathfinder.cs" />
     <Compile Include="Patches\SlashFx.cs" />
     <Compile Include="Patches\Platform.cs" />
     <Compile Include="Patches\PreviewRecording.cs" />
