--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -122,7 +122,9 @@
     <Compile Include="Mod\Entities\CompleteAreaTrigger.cs" />
     <Compile Include="Mod\Entities\CrystalShatterTrigger.cs" />
     <Compile Include="Mod\Entities\CoreModeTrigger.cs" />
+    <Compile Include="Mod\Entities\CSGEN_GenericStrawberrySeeds.cs" />
     <Compile Include="Mod\Entities\CustomNPC.cs" />
+    <Compile Include="Mod\Entities\GenericStrawberrySeed.cs" />
     <Compile Include="Mod\Entities\LavaBlockerTrigger.cs" />
     <Compile Include="Mod\Entities\CustomEntityAttribute.cs" />
     <Compile Include="Mod\Entities\RegisterStrawberryAttribute.cs" />
@@ -157,6 +159,7 @@
     <Compile Include="Mod\Helpers\EndUserException.cs" />
     <Compile Include="Mod\Helpers\SafeRoutine.cs" />
     <Compile Include="Mod\Registry\IStrawberry.cs" />
+    <Compile Include="Mod\Registry\IStrawberrySeeded.cs" />
     <Compile Include="Mod\Registry\StrawberryRegistry.cs" />
     <Compile Include="Mod\UI\AutoModUpdater.cs" />
     <Compile Include="Mod\UI\OuiDependencyDownloader.cs" />
